# poly-btc-monitor

./: .env.example  .gitignore  PLAN.md  README.md  requirements.txt
rust_bot/: .env.example  .gitignore  Cargo.toml  README.md
rust_bot/src/: config.rs  db.rs  decoder.rs  listener.rs  main.rs  notifier.rs  signal.rs  state.rs
src/: analyzer.py  config.py  copy_trade_planner.py  db.py  main.py  models.py  pipeline.py
src/fetchers/: chain_rpc.py  data_api.py  gamma_api.py  hypersync.py
src/web/: app.py
src/web/static/css/: de_stijl.css
src/web/templates/: base.html  index.html  plan.html  wallet.html  wallets.html
