[package]
name = "poly_copy_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
 tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
hex = "0.4"

# EVM stack
alloy = { version = "0.1", features = ["full"] }
alloy-primitives = "0.7"
alloy-provider = "0.1"
alloy-rpc-types = "0.1"
alloy-transport = "0.1"
alloy-transport-http = "0.1"
alloy-consensus = "0.1"

# SQLite
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

[profile.release]
opt-level = 3
lto = true
